fixed bugs where the label list overflow parent element did not generate a horizontal scroll bar and the label list options were not placed correctly when deleting label text

--- a/styles.css
+++ b/styles.css
@@ -425,6 +425,7 @@ body {
   display: none;
   z-index: 2;
   border-radius: 4px;
+  user-select: none;
 }
 
 
